--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,12 @@
     "support": {
         "email": "support@syonix.ch"
     },
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/sir-code-a-lot/log-viewer-lib.git"
+        }
+    ],
     "require": {
         "php": ">=5.4",
         "silex/silex": "~1.2",
@@ -29,9 +35,10 @@
         "league/flysystem-cached-adapter": "~1.0",
         "deralex/yaml-config-service-provider": "~1.0",
         "doctrine/collections": "~1.3",
-        "phpunit/phpunit": "~4.7",
-        "syonix/log-viewer-lib": "^1.0"
+        "phpunit/phpunit": "~5.7",
+        "Syonix/log-viewer-lib": "dev-master"
     },
+    "minimum-stability": "dev",
     "autoload": {
         "psr-0": {"Syonix\\": "src/"}
     }
